2004-09-01  Daniel Sebald  <daniel.sebald@ieee.org>

	* NEWS: Updated.

	* configure.in: Added enable and define switches to activate new
	portions of code:
	  WITH_IMAGE (--enable-with-image) code for plotting images
	  WITH_IMAGE_VERIFY_ALL_PIXEL_LOCATIONS (--enable-image-grid-verify)
	    code for verifying every point in image grid is uniformly spaced
	  BINARY_DATA_FILE (--enable-binary-data-file) code to allow reading
	    general binary data files
	  BINARY_X11_POLYGON (--enable-binary-x11-polygon) code for X11 that
	    allows transferring polygon information as binary values rather
	    than ASCII, to save space in plot buffers

	* demo/all.dem: Added inclusion of image.dem.

	* demo/asciimat.dat demo/blutux.rgb demo/demo.edf demo/scatter2.bin
	demo/sine.bin demo/using.bin: New datafiles required by image.dem.

	* demo/image.dem: New demo to illustrate and test various new image
	and binary and matrix data file features.

	* docs/gnuplot.doc: Added documentation for image features and general
	binary file syntax.  Also, removed language indicating gnuplot matrix
	binary is restricted to `splot`, as it now can be used for images in
	`plot`.

	* src/Makefile.am: Added gplt_x11.h to gnuplot_SOURCES list and
	gnuplot_x11_SOURCES list.  Added bin_hook.c to gnuplot_SOURCES list and
	removed binary.c and binary.h from this list.

	* src/README: Added a discussion of technical details about how the
	formulas for properly orienting an image and passing that to the
	terminal driver are derived.  They can be arcane if just looking at the
	code inside plot_image_or_update_axes().  Same goes for the details
	about sending binary data to gnuplot_x11 for images.  It requires a
	simple heuristic encoding scheme to avoid a few particular characters
	from the data stream and can appear confusing at first sight.

	* src/bin_hook.c: A new, short file to include binary.c in the source
	tree if BINARY_DATA_FILE is not defined.  Otherwise, binary.c is no
	longer required.
