@@ -57,9 +57,9 @@ html: airfoil.html arrowstyle.html binary.html bivariat.html candlesticks.html c
 Makefile.am: Makefile.am.in
 	rm -f $@ $@t
 	sed -n '1,/^##m4-files-begin/p' Makefile.am.in > $@t
-	echo EXTRA_DIST = Makefile.am.in *.bor *.cor *.dat *.dem *.fnc *.inc \
-	  nearmap.csv labelplot.pdb sound.par sound2.par start.par webify.pl \
-	  *.rot | fmt | \
+	echo EXTRA_DIST = Makefile.am.in *.bin *.bor *.cor *.dat *.dem *.edf \
+	  *.fnc *.inc nearmap.csv labelplot.pdb *.rgb sound.par sound2.par \
+	  start.par webify.pl *.rot | fmt | \
 	  (tr '\012' @; echo) | sed 's/@$$/%/;s/@/ \\@/g' | tr @% '\012 ' \
 	  >> $@t
 	sed -n '/^##m4-files-end/,$$p' $< >> $@t
